--- a/plum_bossom-page/plum_bossom-page.html
+++ b/plum_bossom-page/plum_bossom-page.html
@@ -154,14 +154,14 @@
     </nav>
     <aside class="aside">
       <ul class="aside_text">
-        <li><a href="http://127.0.0.1:5500/index.html">ホームページ</a></li>
+        <li><a href="https://k689022123.github.io/index-picture.github.io/index.html">ホームページ</a></li>
         <li></li>
-        <li><a href="http://127.0.0.1:5500/list.html">List 目次</a></li>
+        <li><a href="https://k689022123.github.io/list-page/list/list.html">List 目次</a></li>
         <li></li>
-        <li><a href="">制作計画書について</a></li>
+        <li><a href="https://k689022123.github.io/graduation_topic_plan/graduation_topic_plan/graduation_topic_plan.html">制作計画書について</a></li>
       </ul>
     </aside>
-
+    
     <main class="main">
       <ul class="main_aside">
         <li class="main_aside_note">
